@@ -1,3 +1,11 @@
+2007-11-07  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-helpers.c
+		- (read_applet_private_values_from_gconf, write_ignore_ca_cert_helper, 
+		   write_applet_private_values_to_gconf, nm_gconf_write_connection,
+		   read_one_setting): read & write applet private values to GConf when
+			reading & writing the connection
+
 2007-11-07  Tambet Ingo  <tambet@gmail.com>
 
 	* src/*: The NMSetting API changed significantly, adapt the changes.
